--- a/css/app.css
+++ b/css/app.css
@@ -84,8 +84,26 @@ h1 {
     cursor: default;
     background: red;
     font-size: 33px;
+   
+     animation: shake 5s ;
+     animation-iteration-count: infinite;
+    
 }
 
+@keyframes shake{
+    0%{transform: translate(1px,1px)rotate(0deg)}
+    10%{transform: translate(1px,1px)rotate(2deg)}
+    20%{transform: translate(1px,1px)rotate(-2deg)}
+    30%{transform: translate(1px,1px)rotate(1deg)}
+    40%{transform: translate(1px,1px)rotate(-1deg)}
+    50%{transform: translate(1px,1px)rotate(-2deg)}
+    60%{transform: translate(1px,1px)rotate(2deg)}
+    70%{transform: translate(1px,1px)rotate(-1deg)}
+    80%{transform: translate(1px,1px)rotate(1deg)}
+    90%{transform: translate(1px,1px)rotate(-2deg)}
+    100%{transform: translate(1px,1px)rotate(2deg)}
+    110%{transform: translate(1px,1px)rotate(0deg)}
+}
 .replay{
     background-color: #02ccba;
      color:white;
@@ -131,4 +149,9 @@ h1 {
 }
 .win{
     background-color: white;
+    width: 100%;
+    height:100%;
+}
+.disable-clicks{
+pointer-events: none;
 }
