--- a/css/app.css
+++ b/css/app.css
@@ -85,24 +85,24 @@ h1 {
     background: red;
     font-size: 33px;
    
-     animation: shake 5s ;
+     animation: shake 100ms ;
      animation-iteration-count: infinite;
     
 }
 
 @keyframes shake{
     0%{transform: translate(1px,1px)rotate(0deg)}
-    10%{transform: translate(1px,1px)rotate(2deg)}
-    20%{transform: translate(1px,1px)rotate(-2deg)}
-    30%{transform: translate(1px,1px)rotate(1deg)}
-    40%{transform: translate(1px,1px)rotate(-1deg)}
-    50%{transform: translate(1px,1px)rotate(-2deg)}
-    60%{transform: translate(1px,1px)rotate(2deg)}
-    70%{transform: translate(1px,1px)rotate(-1deg)}
-    80%{transform: translate(1px,1px)rotate(1deg)}
+    10%{transform: translate(-1px,-1px)rotate(2deg)}
+    20%{transform: translate(1px,2px)rotate(-2deg)}
+    30%{transform: translate(2px,-2px)rotate(1deg)}
+    40%{transform: translate(-1px,1px)rotate(-1deg)}
+    50%{transform: translate(2px,1px)rotate(-2deg)}
+    60%{transform: translate(1px,-2px)rotate(2deg)}
+    70%{transform: translate(1px,-1px)rotate(-1deg)}
+    80%{transform: translate(2px,2px)rotate(1deg)}
     90%{transform: translate(1px,1px)rotate(-2deg)}
-    100%{transform: translate(1px,1px)rotate(2deg)}
-    110%{transform: translate(1px,1px)rotate(0deg)}
+    100%{transform: translate(2px,2px)rotate(2deg)}
+    110%{transform: translate(-2px,1px)rotate(0deg)}
 }
 .replay{
     background-color: #02ccba;
