--- a/css/app.css
+++ b/css/app.css
@@ -17,7 +17,7 @@ body {
 }
 
 body {
-    background: #ffffff url('../img/geometry2.png'); /* Background pattern from Subtle Patterns */
+    background: #ffffff url('../img/geometry2.png');
     font-family: 'Coda', cursive;
 }
 
@@ -28,11 +28,7 @@ body {
     flex-direction: column;
 }
 
- 
-/*
- * Styles for the deck of cards
- */
-
+/* Styles for the deck of cards*/
 .deck {
     width: 660px;
     min-height: 680px;
@@ -81,10 +77,7 @@ body {
     font-size: 33px;
 }
 
-/*
- * Styles for the Score Panel
- */
-
+/* Styles for the Score Panel*/
 .score-panel {
     text-align: left;
     width: 500px;
@@ -106,4 +99,45 @@ body {
 .score-panel .restart {
     float: right;
     cursor: pointer;
+}
+
+/*Modal Background*/
+.modal-background {
+    display: none;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(2,0,186,0.1);
+}
+
+ /*Modal Content*/
+.modal-content {
+    background-color: rgba(255,255,255,0.85);
+    margin: auto;
+    padding: 20px;
+    border: 3px solid #888;
+    width: 60%;
+    height: 100%;
+    text-align: center;
+}
+
+.trophy-img {
+    width: 20%;
+}
+.restart-img {
+    width: 10%;
+    cursor: pointer;
+}
+
+.score-table {
+    margin-left: auto;
+    margin-right: auto;
+    display: grid;
+    grid-template-columns: 26% 16% 16% 16% 26%;
+
+}
+.fa {
+    margin: 0;
+    padding: 0;
 }
