--- a/css/app.css
+++ b/css/app.css
@@ -36,7 +36,33 @@ h1 {
 /*
  * Styles for the deck of cards
  */
+@keyframes shake {
+    10%, 90% {
+        transform: translate3d(-1px, 0, 0);
+    }
 
+    20%, 80% {
+        transform: translate3d(2px, 0, 0);
+    }
+
+    30%, 50%, 70% {
+        transform: translate3d(-4px, 0, 0);
+    }
+
+    40%, 60% {
+        transform: translate3d(4px, 0, 0);
+    }
+}
+
+@keyframes cardScale {
+    from {
+        transform: scale(0.7,0.7);
+    }
+
+    to {
+        transform: scale(1,1);
+    }
+}
 .deck {
     width: 660px;
     min-height: 680px;
@@ -65,21 +91,29 @@ h1 {
     box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
 }
 
-.deck .card.open {
-    transform: rotateY(0);
-    background: #02b3e4;
-    cursor: default;
-}
+    .deck .card.open {
+        transform: rotateY(360deg);
+        transition-duration: 0.3s;
+        background: #02b3e4;
+        cursor: default;
+    }
 
 .deck .card.show {
     font-size: 33px;
 }
 
-.deck .card.match {
-    cursor: default;
-    background: #02ccba;
-    font-size: 33px;
-}
+    .deck .card.match {
+        animation: cardScale 0.32s;
+        transform: scale(1,1);
+        cursor: default;
+        background: #02ccba;
+        font-size: 33px;
+    }
+    .deck .card.notMatch {
+        animation: shake 0.82s;
+        transform: translate3d(0,0,0);
+        background-color: rgb(250, 104, 19);
+    }
 
 /*
  * Styles for the Score Panel
@@ -106,4 +140,52 @@ h1 {
 .score-panel .restart {
     float: right;
     cursor: pointer;
+}
+.gameover i::before {
+    font-size: 10em;
+    color: green;
+    position: absolute;
+    top: 30%;
+    left: 45%;
+}
+
+.gameover {
+    height: 100%;
+}
+
+    .gameover h3 {
+        position: absolute;
+        top: 48%;
+        left: 34.5%;
+    }
+
+    .gameover p {
+        position: absolute;
+        top: 55%;
+        left: 45%;
+    }
+
+    .gameover button {
+        position: absolute;
+        top: 70%;
+        left: 45%;
+        background-color: turquoise;
+        font-size: 1.5em;
+        border-radius: 10px;
+    }
+
+.timer {
+    width: 20%;
+    height: 30px;
+    display: inline-flex;
+    margin-left: 30px;
+}
+
+    .timer h5 {
+        margin: 0px;
+    }
+
+.timernumber {
+    margin-left: 10px;
+    margin-top: -3px;
 }
