--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,3 +1,13 @@
+@media screen and (min-width: 1025px)
+{
+    .deck{
+        width: 1000px;
+    }
+    .deck .card{
+        width: 220px;
+        height: 145px;
+    }
+}
 @media screen and (max-width: 700px) and (min-width: 499px)
 {
     .deck{
@@ -6,6 +16,18 @@
     .deck .card{
         height: 100px;
         width: 100px;
+    }
+    .gameover i::before{
+        left: 35%;
+    }
+    .gameover h3{
+        left: 8.5%;
+    }
+    .gameover p{
+        left: 30%;
+    }
+    .gameover button{
+        left: 35%;
     }
 }
 @media screen and (max-width: 498px) {
@@ -19,5 +41,19 @@
         height: 80px;
         width: 50px;
     }
-    
+    .gameover i::before{
+        left: 25%;
+        top: 20%;
+    }
+    .gameover p{
+        left: 20%;
+    }
+    .gameover h3{
+        font-size: 1.1em;
+        left: 15.5%;
+        top: 45%;
+    }
+    .gameover button{
+        left: 25%;
+    }
 }
