--- a/css/app.css
+++ b/css/app.css
@@ -21,11 +21,12 @@ body {
     font-family: 'Coda', cursive;
 }
 
+
 .container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
 }
 
 h1 {
@@ -107,7 +108,15 @@ h1 {
 .score-panel .stars li {
     list-style: none;
     display: inline-block;
+
 }
+
+
+.checked {
+
+    color:orange;
+}
+
 
 .score-panel .restart {
     float: right;
@@ -116,8 +125,9 @@ h1 {
 
 .score-panel .timer {
     float: center;
-    margin: auto;
+    margin-left : 40px;
     text-align: center;
+	display : none;
 
 }
 
@@ -142,8 +152,11 @@ h1 {
 
 
 .smily {
-    font-size:60px;
+    font-size:100px;
     color:yellow;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 
@@ -160,9 +173,10 @@ h1 {
     padding: 32px;
     border-radius: 10px;
     box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
-    display: flex;
-    flex-wrap: wrap;
+    display: inline;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: 0 0 3em;
+    text-align: center;
 }
