--- a/css/app.css
+++ b/css/app.css
@@ -59,10 +59,14 @@ h1 {
     color: #ffffff;
     border-radius: 8px;
     cursor: pointer;
+    transform: rotateY(-180deg);
     display: flex;
     justify-content: center;
     align-items: center;
     box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
+    transition:.2s ease all;
+    -webkit-transition:.2s ease all;
+    -moz-transition:.2s ease all;
 }
 
 .deck .card.open {
