--- a/css/app.css
+++ b/css/app.css
@@ -66,7 +66,7 @@ h1 {
 }
 
 .deck .card.open {
-    transform: rotateY(0);
+    transform: rotateY(21);
     background: #02b3e4;
     cursor: default;
 }
@@ -81,6 +81,10 @@ h1 {
     font-size: 33px;
 }
 
+.deck .card.incorrect {
+    background: #f85b3c;
+    font-size: 33px;
+}
 /*
  * Styles for the Score Panel
  */
