--- a/css/app.css
+++ b/css/app.css
@@ -108,7 +108,7 @@ h1 {
     float: right;
     cursor: pointer;
 }
-.CongratulationsPopup {
+.congratulationsPopup {
   background: linear-gradient(#e66465, #9198e5);
   width: 100%;
   height: 100%;
