--- a/css/app.css
+++ b/css/app.css
@@ -23,7 +23,7 @@ body {
 
 .container {
     display: flex;
-    justify-content: center;
+    /*justify-content: center;*/
     align-items: center;
     flex-direction: column;
 }
@@ -90,6 +90,9 @@ h1 {
     text-align: left;
     width: 345px;
     margin-bottom: 10px;
+    display: flex;
+    flex-direction:row;
+    justify-content:space-around;
 }
 
 .score-panel .stars {
@@ -108,8 +111,9 @@ h1 {
     float: right;
     cursor: pointer;
 }
+
 .congratulationsPopup {
-  background: linear-gradient(#e66465, #9198e5);
+  background: linear-gradient(#aa7ecd, #ffffff);
   width: 100%;
   height: 100%;
   display: flex;
@@ -119,13 +123,54 @@ h1 {
   visibility: hidden;
   z-index: 2;
   position: fixed;
-  justify-content:space-around;
+  justify-content:center;
+  text-transform: uppercase;
+  margin: 0;
+  font-size: 24px;
+}
+p{
+  font-size: 24px;
+  line-height: 1.2em;
+  text-transform: none;
 }
 #playButton{
+  align-self: center;
   width: 150px;
-  height: 120px;
-  color: #ffffff;
+  height:80px;
+  background-color:#02ccba;
+  font-weight: bold;
+  font-size: 20px;
   cursor: pointer;
   border-radius: 10px;
   text-align: center;
+  border: 0;
 }
+#timerBox{
+  width: 30px;
+  height: 10px;
+}
+@media screen and (max-width:699px) {
+  .congratulationsPopup {
+   height: 1000px;
+   flex-wrap: wrap;
+  }
+  #playButton{
+    width: 200px;
+    height:130px;
+    font-size: 24px;
+  }
+  p{
+   font-size: 16px;
+  }
+  body {
+   width: 50%;
+   min-height: 50%;
+  }
+  .moves{
+    font-size: 24px;
+  }
+}
+/*@media screen and (min-width:700px) and (max-width: 1200px) {
+
+
+}*/
