--- a/css/app.css
+++ b/css/app.css
@@ -23,7 +23,6 @@ body {
 
 .container {
     display: flex;
-    /*justify-content: center;*/
     align-items: center;
     flex-direction: column;
 }
@@ -113,64 +112,109 @@ h1 {
 }
 
 .congratulationsPopup {
-  background: linear-gradient(#aa7ecd, #ffffff);
-  width: 100%;
-  height: 100%;
-  display: flex;
-  text-align: center;
-  flex-direction: column;
-  background-size: cover;
-  visibility: hidden;
-  z-index: 2;
-  position: fixed;
-  justify-content:center;
-  text-transform: uppercase;
-  margin: 0;
-  font-size: 24px;
+    background: linear-gradient(#aa7ecd, #ffffff);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    background-size: cover;
+    visibility: hidden;
+    z-index: 2;
+    position: fixed;
+    justify-content:center;
+    text-transform: uppercase;
+    margin: 0;
+    font-size: 24px;
 }
 p{
-  font-size: 24px;
-  line-height: 1.2em;
-  text-transform: none;
+    font-size: 24px;
+    line-height: 1.2em;
+    text-transform: none;
 }
 #playButton{
-  align-self: center;
-  width: 150px;
-  height:80px;
-  background-color:#02ccba;
-  font-weight: bold;
-  font-size: 20px;
-  cursor: pointer;
-  border-radius: 10px;
-  text-align: center;
-  border: 0;
+    align-self: center;
+    width: 150px;
+    height:80px;
+    background-color:#02ccba;
+    font-weight: bold;
+    font-size: 20px;
+    cursor: pointer;
+    border-radius: 10px;
+    text-align: center;
+    border: 0;
 }
 #timerBox{
-  width: 30px;
-  height: 10px;
+    width: 30px;
+    height: 10px;
 }
-@media screen and (max-width:699px) {
-  .congratulationsPopup {
-   height: 1000px;
-   flex-wrap: wrap;
-  }
-  #playButton{
-    width: 200px;
-    height:130px;
-    font-size: 24px;
-  }
-  p{
-   font-size: 16px;
-  }
-  body {
-   width: 50%;
-   min-height: 50%;
-  }
-  .moves{
-    font-size: 24px;
-  }
+@media screen and (min-width:600px) and (max-width: 760px) {
+.container {
+    height: 1100px;
+    align-items: center;
 }
-/*@media screen and (min-width:700px) and (max-width: 1200px) {
-
-
-}*/
+.deck {
+    width: 450px;
+    min-height: 450px;
+    height: 450px;
+}
+.deck .card{
+    width:80px;
+    height:80px;
+}
+.deck .card.show {
+    font-size: 24px;
+}
+h1{
+    font-size: 32px;
+}
+.congratulationsPopup {
+    flex-wrap: wrap;
+    width:1000px;
+}
+}
+@media screen and (max-width:599px) {
+h1{
+    font-size: 24px;
+}
+.congratulationsPopup {
+    flex-wrap: wrap;
+}
+p{
+    font-size: 16px;
+}
+.container {
+    height: 640px;
+    align-items: center;
+}
+.deck {
+    width: 300px;
+    min-height: 300px;
+    height: 300px;
+}
+.deck .card{
+    width:50px;
+    height:50px;
+}
+.score-panel{
+    text-align: center;
+    width: 345px;
+    margin-bottom: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction:row;
+    justify-content:space-around;
+}
+#timerBox{
+    width: 60px;
+    height: 30px;
+}
+.deck .card.show {
+    font-size: 20px;
+}
+#playButton{
+    width: 120px;
+    height:60px;
+    font-size: 16px;
+}
+}
