--- a/css/app.css
+++ b/css/app.css
@@ -81,6 +81,16 @@ h1 {
     font-size: 33px;
 }
 
+.deck .card.unmatch {
+    cursor: default;
+    background: #FF6B72;
+    font-size: 33px;
+}
+
+.deck .card.disable {
+    pointer-events: none;
+}
+
 /*
  * Styles for the Score Panel
  */
