--- a/css/app.css
+++ b/css/app.css
@@ -33,6 +33,51 @@ h1 {
     font-weight: 300;
 }
 
+.show {
+    visibility: visible !important;
+    opacity: 1 !important;
+}
+
+/*
+ * Styles for the Score Panel
+ */
+
+.score-panel {
+    display: flex;
+    flex-flow: row wrap;
+    text-align: left;
+    width: 345px;
+    margin-bottom: 10px;
+}
+
+.score-panel .stars {
+    margin: 0;
+    padding: 0;
+    display: inline-block;
+    margin: 0 5px 0 0;
+}
+
+.score-panel .stars li {
+    list-style: none;
+    display: inline-block;
+}
+
+.score-panel .timer li {
+    list-style: none;
+    display: inline-block;
+}
+
+.stars,
+.moves,
+.timer {
+    margin: 0 15px;
+}
+
+.score-panel .restart {
+    float: right;
+    cursor: pointer;
+}
+
 /*
  * Styles for the deck of cards
  */
@@ -89,38 +134,4 @@ h1 {
 
 .deck .card.disable {
     pointer-events: none;
-}
-
-/*
- * Styles for the Score Panel
- */
-
-.score-panel {
-    display: flex;
-    flex-flow: row wrap;
-    text-align: left;
-    width: 345px;
-    margin-bottom: 10px;
-}
-
-.score-panel .stars {
-    margin: 0;
-    padding: 0;
-    display: inline-block;
-    margin: 0 5px 0 0;
-}
-
-.stars,
-.moves {
-    margin: 0 15px;
-}
-
-.score-panel .stars li {
-    list-style: none;
-    display: inline-block;
-}
-
-.score-panel .restart {
-    float: right;
-    cursor: pointer;
 }
